<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyStoryApp</string>
    <string name="action_register">Register</string>
    <string name="title_dialog_error">Oops something wrong</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="label_is_havent_account">Don\'t have account ?</string>
    <string name="label_is_have_account">Already have account ?</string>
    <string name="action_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password...</string>
    <string name="action_to_register">Register here</string>
    <string name="action_to_login">Login here</string>
    <string name="label_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="label_greeting_user">Hello, %1$s!</string>
    <string name="message_failed_take_picture">Upload failed</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="action_logout">Logout</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_incorrect_auth">Email or password incorrect</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_new_story">Add New Story</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="title_choose_a_picture">Choose a picture</string>
    <string name="message_success_upload">Upload Success</string>
    <string name="title_upload_info">Upload Info</string>
    <string name="action_upload_story">Upload</string>
    <string name="hint_description">Story Description</string>
    <string name="menu_setting">Setting</string>
    <string name="appwidget_text">Story Image Banner</string>
    <string name="empty_text">No Data</string>
    <string name="app_widget_description">Story App Image Banner Widget</string>
    <string name="title_profile">Profile</string>
    <string name="error_password_more_6">Password must more than 8 character</string>
    <string name="label_nama">Name</string>
    <string name="title_message">Information</string>
    <string name="message_register_success">Register Success</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="content_desc">Description</string>
    <string name="story_s_illustration">Content Picture</string>
    <string name="content_tittle">Tittle</string>
    <string name="content_date">Date</string>
    <string name="welcome_tag">Welcome To Rino Story App</string>
    <string name="login_continue">Welcome to an innovative and exciting platform for story lovers worldwide. Enjoy</string>
    <string name="register_text">Please Register To Continue</string>
    <string name="title_home">Story</string>
    <string name="title_add_story">Add Story</string>
    <string name="img_back">Back Button</string>
    <string name="your_email">Your Email...</string>
    <string name="account_icon">Account</string>
    <string name="setting_icon">Setting</string>
    <string name="insert_email">Insert Email...</string>
    <string name="your_name">Name...</string>
    <string name="error_less_than_eight">Password must be at least 8 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="location">Location</string>
    <string name="no_data">No Data</string>
    <string name="stories_not_found_error">Stories Not Found</string>
    <string name="explorers">Explorers</string>
    <string name="loading_error_message">No Data Found</string>
    <string name="retry">Please Retry</string>
    <string name="login_success_message">Login Success</string>
    <string name="login_error_message">Login Failed</string>
    <string name="registration_success">Registration Success</string>
    <string name="registration_error_message">Registration Failed</string>
    <string name="token_key">token_key</string>
    <string name="logout_dialog_title">Are you sure want to log out?</string>
    <string name="logout_dialog_message">You need to login again</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logout_message_success">Logout Succesfull</string>
    <string name="error_empty_image">Please Insert Image</string>
    <string name="message_failed_upload">Upload Failed</string>
    <string name="activate_location">Please activate your location</string>
    <string name="location_permission_denied">Izin lokasi tidak didapat</string>
    <string name="send_location">Send Location</string>
    <string name="maps_title">Maps</string>
    <string name="language_button">Language</string>
    <string name="satellite_icon">Satellite</string>
    <string name="error_register_login">Please correct your registration format</string>
    <string name="select_image">Insert Image</string>
</resources>