<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/tvGreetingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/title_profile"
        android:textColor="@color/blue_sky"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetingName" />

    <TextView
        android:id="@+id/tvUserEmail"
        style="@style/StoryTextContent.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintTop_toTopOf="@id/imgProfile"
        tools:text="Email"/>

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_button"
        android:background="@drawable/bg_button"
        style="@style/button_style"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_button"
        android:text="@string/action_logout"
        app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="2dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/img_back"
        app:layout_constraintBottom_toBottomOf="@+id/tvGreetingName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGreetingName" />

</androidx.constraintlayout.widget.ConstraintLayout>